--- a/src/static/manifest.json
+++ b/src/static/manifest.json
@@ -1,11 +1,11 @@
 {
     "manifest_version": 3,
-    "name": "react-boilerplate",
-    "description": "react-boilerplate for chrome extension",
+    "name": "habit-loop",
+    "description": "Habit loop do something",
     "version": "1.0.0",
     "action" : {
         "default_popup": "popup.html",
-        "default_title": "React Boilerplate",
+        "default_title": "Habit Loop",
         "default_icon" : "icon.png"
     },
     "chrome_url_overrides": {
@@ -22,7 +22,6 @@
         "48" : "icon.png",
         "128" : "icon.png"
     },
-    "options_page": "options.html",
     "background": {
         "service_worker": "background.js"
     },
